--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,15 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 cryptography==45.0.3
 idna==3.10
+iniconfig==2.1.0
+packaging==25.0
 paramiko==3.5.1
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pycparser==2.22
+Pygments==2.19.1
 PyNaCl==1.5.0
+pytest==8.4.0
 python-dotenv==1.1.0
 requests==2.32.3
 sshtunnel==0.4.0
